=head1 NAME

ReleaseNotes - These are the Release Notes for 1.20

=head1 SYNOPSIS

These are the major changes since version 1.19

=head1 DESCRIPTION

Thanks to Bernd Ulmann for giving me access to his VAX and the help of
the vmsperl community, I have added support for OpenVMS.

Major changes since 1.19

=over 4

=item 1

C<Test::Smoke::SysInfo> is a work in progress. Some more tweaking for
Solaris was done with the help of Alan Burlison and Davis Woolger.

=item 2

I order to support systems without C<rsync(1)> access, I have added
C<Test::Smoke::FTPClient> that syncs source-trees with Net::FTP from
the ActiveState ftp repository. It is slow, but gets the job done.

=item 3

A lot of filename/directoryname issues with VMS were resolved.

=item 4

A new way to get testresults directly from "make test_harness" was
introduced to help VMS (and perhaps Win32).

=item 5

Jarkko Hietaniemi supplied a way to add C compiler messages to the
smoke report.

=item 6

Patches applied through the pfile mechanism now support a third
argument that represents a patch description. This (optional)
description is also added to F<patchlevel.h>.

Added a new "Locally applied patches:" section to the smoke report.

=back

=head1 REVISION

$Id$

=head1 COPYRIGHT

(c) 2002-2004, Abe Timmerman <abeltje@cpan.org> All rights reserved.

This library is free software; you can redistribute it and/or modify
it under the same terms as Perl itself.

See:

=over 4

=item * L<http://www.perl.com/perl/misc/Artistic.html>

=item * L<http://www.gnu.org/copyleft/gpl.html>

=back

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

=cut